--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
         <div class="item vague1">
             <div class="cont-img-port">
-                <img src="ressources/Capture%20d%E2%80%99%C3%A9cran%202020-04-13%20%C3%A0%2015.51.00.png" alt="img portfolio">
+                <img src="ressources/ohmyfood.png" alt="img portfolio">
             </div>
             <h3>OhmyFood</h3>
             <p>Projet de formation, qui met en valeur 4 grands menus parisiens avec l'intégration d'animations CSS !</p>
